--- a/Muscle_integration.Rmd
+++ b/Muscle_integration.Rmd
@@ -1,9 +1,8 @@
 ---
-title: "Liver_integration"
+title: "Muscle"
 output: html_document
-date: "2022-12-22"
+date: "2022-12-21"
 ---
-
 ```{r}
 curdir <- "~/Labolatory/JST_Mouse_Human/Tabula/Integration"
 # renv::restore()
@@ -25,7 +24,7 @@ source(paste(curdir, "integration_analysis_function.R", sep = "/"))
 
 解析に使う組織の選択
 ```{r}
-input <- "Liver"
+input <- "Muscle"
 outdir <- paste(curdir, input, sep = "/")
 ```
 
@@ -38,7 +37,7 @@ Hs_seurat %>%
   extract_one2one_cell(Hs_cell, "Gene_name") -> Hs_seurat.one2one.table
 
 # マウス
-readRDS(file=paste(outdir, "/TM_", input, ".rds", sep = "")) -> Mm_seurat
+readRDS(file=paste(outdir, "/TM_", input, ".rds", sep = "")) -> Mm_seurat # エラー、ない
 Mm_cell <- celltype_pick(Mm_seurat)
 Mm_seurat %>%
   extract_one2one_cell(Mm_cell, "Mouse_gene_name") -> Mm_seurat.one2one.table
@@ -89,7 +88,7 @@ ElbowPlot(object = Hs_Mm.seurat.combined, ndims = 50)
 
 UMAP＋可視化
 ```{r}
-npcs <- 19
+npcs <- 26
 Hs_Mm.seurat.combined <- FindNeighbors(Hs_Mm.seurat.combined,
                                        reduction = "pca", dims = 1:npcs)
 Hs_Mm.seurat.combined <- FindClusters(Hs_Mm.seurat.combined,
@@ -282,4 +281,5 @@ paste(outdir,  "/Figure/Hs_Mm_", input,
       ".seurat_integrate.celltype_pick.only_gene_ratio.png", sep = "") %>%
   ggsave(integrated_figure.ratio, width = 12, height = 20)
 ```
+
 
