--- a/Skin_integration.Rmd
+++ b/Skin_integration.Rmd
@@ -1,9 +1,8 @@
 ---
-title: "Liver_integration"
+title: "Skin"
 output: html_document
-date: "2022-12-22"
+date: "2022-12-21"
 ---
-
 ```{r}
 curdir <- "~/Labolatory/JST_Mouse_Human/Tabula/Integration"
 # renv::restore()
@@ -25,7 +24,7 @@ source(paste(curdir, "integration_analysis_function.R", sep = "/"))
 
 解析に使う組織の選択
 ```{r}
-input <- "Liver"
+input <- "Skin"
 outdir <- paste(curdir, input, sep = "/")
 ```
 
@@ -89,7 +88,7 @@ ElbowPlot(object = Hs_Mm.seurat.combined, ndims = 50)
 
 UMAP＋可視化
 ```{r}
-npcs <- 19
+npcs <- 18
 Hs_Mm.seurat.combined <- FindNeighbors(Hs_Mm.seurat.combined,
                                        reduction = "pca", dims = 1:npcs)
 Hs_Mm.seurat.combined <- FindClusters(Hs_Mm.seurat.combined,
@@ -282,4 +281,3 @@ paste(outdir,  "/Figure/Hs_Mm_", input,
       ".seurat_integrate.celltype_pick.only_gene_ratio.png", sep = "") %>%
   ggsave(integrated_figure.ratio, width = 12, height = 20)
 ```
-
