--- a/Spleen_integration.Rmd
+++ b/Spleen_integration.Rmd
@@ -1,9 +1,13 @@
 ---
-title: "Liver_integration"
+title: "Spleen"
 output: html_document
 date: "2022-12-22"
 ---
-
+---
+title: "Skin"
+output: html_document
+date: "2022-12-21"
+---
 ```{r}
 curdir <- "~/Labolatory/JST_Mouse_Human/Tabula/Integration"
 # renv::restore()
@@ -25,7 +29,7 @@ source(paste(curdir, "integration_analysis_function.R", sep = "/"))
 
 解析に使う組織の選択
 ```{r}
-input <- "Liver"
+input <- "Spleen"
 outdir <- paste(curdir, input, sep = "/")
 ```
 
@@ -89,7 +93,7 @@ ElbowPlot(object = Hs_Mm.seurat.combined, ndims = 50)
 
 UMAP＋可視化
 ```{r}
-npcs <- 19
+npcs <- 22
 Hs_Mm.seurat.combined <- FindNeighbors(Hs_Mm.seurat.combined,
                                        reduction = "pca", dims = 1:npcs)
 Hs_Mm.seurat.combined <- FindClusters(Hs_Mm.seurat.combined,
@@ -282,4 +286,3 @@ paste(outdir,  "/Figure/Hs_Mm_", input,
       ".seurat_integrate.celltype_pick.only_gene_ratio.png", sep = "") %>%
   ggsave(integrated_figure.ratio, width = 12, height = 20)
 ```
-
