--- a/Thymus_GOanalysis_SS_ortholog.Rmd
+++ b/Thymus_GOanalysis_SS_ortholog.Rmd
@@ -1,9 +1,8 @@
 ---
-title: "run_seurat_GO_analysis"
+title: "Thymus"
 output: html_document
-date: "2022-12-03"
+date: "2022-12-23"
 ---
-
 細胞クラスターで特異的に発現しているヒト特異的遺伝子とマウス特異的遺伝子のGO解析
 ```{r}
 library(rbioapi)
@@ -19,7 +18,7 @@ BP: GO:0008150
 MF: GO:0003674
 CC: GO:0005575
 ```{r}
-input <- "Liver"
+input <- "Thymus"
 outdir <- paste(curdir, input, sep = "/")
 ```
 
@@ -48,6 +47,10 @@ GO解析
 ```{r}
 run_GOanalysis_for_all_ident("Hs", hsapiens, cluster.list)
 run_GOanalysis_for_all_ident("Mm", mmuculus, cluster.list)
+```
+
+
+```{r}
 ```
 GO解析の結果をプロットして可視化
 GO解析の結果を読み込み
