--- a/Pancreas_GOanalysis_SS_ortholog.Rmd
+++ b/Pancreas_GOanalysis_SS_ortholog.Rmd
@@ -1,9 +1,8 @@
 ---
-title: "run_seurat_GO_analysis"
+title: "Pancreas"
 output: html_document
-date: "2022-12-03"
+date: "2022-12-23"
 ---
-
 細胞クラスターで特異的に発現しているヒト特異的遺伝子とマウス特異的遺伝子のGO解析
 ```{r}
 library(rbioapi)
@@ -12,6 +11,7 @@ library(SingleCellExperiment)
 library(gridExtra)
 library(cowplot)
 setwd("/Users/kariyayama/Labolatory/JST_Mouse_Human/Tabula/Integration")
+set_here("/Users/kariyayama/Labolatory/JST_Mouse_Human/Tabula/Integration")
 source("run_seurat_GO_analysis.R")
 ```
 
@@ -19,7 +19,7 @@ BP: GO:0008150
 MF: GO:0003674
 CC: GO:0005575
 ```{r}
-input <- "Liver"
+input <- "Pancreas"
 outdir <- paste(curdir, input, sep = "/")
 ```
 
