--- a/Spleen_integration_version2.Rmd
+++ b/Spleen_integration_version2.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Lung"
+title: "Spleen_integration_version2"
 output: html_document
-date: "2022-12-28"
+date: "2023-01-06"
 ---
 ```{r}
 curdir <- "~/Labolatory/JST_Mouse_Human/Tabula/Integration"
@@ -25,7 +25,7 @@ source(paste(curdir, "integration_analysis_function.R", sep = "/"))
 解析に使う組織の選択
 ```{r}
 set.seed(12345)
-input <- "Lung"
+input <- "Spleen"
 outdir <- paste(curdir, input, sep = "/")
 ```
 
@@ -89,7 +89,7 @@ ElbowPlot(object = Hs_Mm.seurat.combined, ndims = 50)
 
 UMAP＋可視化
 ```{r}
-npcs <- 26
+npcs <- 22
 Hs_Mm.seurat.combined <- FindNeighbors(Hs_Mm.seurat.combined,
                                        reduction = "pca", dims = 1:npcs)
 Hs_Mm.seurat.combined <- FindClusters(Hs_Mm.seurat.combined,
@@ -315,5 +315,3 @@ paste(outdir,  "/Figure/Hs_Mm_", input,
       ".seurat_integrate.celltype_pick.only_gene_ratio.png", sep = "") %>%
   ggsave(integrated_figure.ratio, width = 12, height = 20)
 ```
-
-
