--- a/Fat_GOanalysis_SS_ortholog.Rmd
+++ b/Fat_GOanalysis_SS_ortholog.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Spleen"
+title: "Fat"
 output: html_document
-date: "2022-12-23"
+date: "2023-01-23"
 ---
 細胞クラスターで特異的に発現しているヒト特異的遺伝子とマウス特異的遺伝子のGO解析
 ```{r}
@@ -18,7 +18,7 @@ BP: GO:0008150
 MF: GO:0003674
 CC: GO:0005575
 ```{r}
-input <- "Spleen"
+input <- "Fat"
 outdir <- paste(curdir, input, sep = "/")
 ```
 
