--- a/label_cells_by_ident.Rmd
+++ b/label_cells_by_ident.Rmd
@@ -37,61 +37,84 @@ for(organ in c("Bladder", "Bone_Marrow", "Heart", "Large_Intestine",
                "Liver", "Kidney", "Lung", "Pancreas", "Skin", "Trachea",
                "Thymus", "Spleen")){
   print(organ)
-  paste(curdir, "/", organ,"/RDS/Hs_", organ, "picked.rds", sep = "") %>%
-    readRDS() -> Hs_seurat.picked
+  # 細胞ラベル
+  readRDS(paste(curdir, "/", organ,"/RDS/Hs_", organ, "picked.rds",
+                sep = ""))@meta.data %>%
+    rownames_to_column(var = "cell") %>%
+    dplyr::select(c("integrated_seurat_cluster", "customclassif")) %>%
+    distinct %>%
+    mutate(class = paste(organ, customclassif, sep = "_")) %>%
+    mutate(integrated_seurat_cluster =
+             as.double(integrated_seurat_cluster)-1) %>%
+    as_tibble -> Hs_seurat.picked.celllabel
+  
+  readRDS(paste(curdir, "/", organ,"/RDS/Mm_", organ, "picked.rds",
+                sep = ""))@meta.data %>%
+    rownames_to_column(var = "cell") %>%
+    dplyr::select(c("integrated_seurat_cluster", "customclassif")) %>%
+    distinct %>%
+    mutate(class = paste(organ, customclassif, sep = "_")) %>%
+    mutate(integrated_seurat_cluster =
+             as.double(integrated_seurat_cluster)-1) %>%
+    as_tibble -> Mm_seurat.picked.celllabel
   
   # マーカー遺伝子数を対応関係ごとに合計
   # ヒト
-  Hs_marker_count <- extract_Hs_count_gene(organ)
+  Hs_marker_count <- extract_Hs_count_gene(organ) %>%
+    inner_join(Hs_seurat.picked.celllabel,
+               by = c("cluster" =  "integrated_seurat_cluster")) %>%
+    mutate(class = paste(SP, class, by = "_"))
   # マウス
-  Mm_marker_count <- extract_Mm_count_gene(organ)
+  Mm_marker_count <- extract_Mm_count_gene(organ) %>%
+    inner_join(Mm_seurat.picked.celllabel,
+               by = c("cluster" =  "integrated_seurat_cluster")) %>%
+    mutate(class = paste(SP, class, sep = "_"))
   
   # ヒトとマウスを結合
-  bind_rows(Hs_marker_count, Mm_marker_count) %>% 
-    inner_join(Hs_seurat_picked.meta.data,
-               by = c("cluster" = "integrated_seurat_cluster")
-               ) ->   Hs_Mm_marker_count
+  bind_rows(Hs_marker_count, Mm_marker_count) -> Hs_Mm_marker_count
   
   # 遺伝子数をプロット
   Hs_Mm_marker_count %>%
     ggplot(aes(x = ratio, y = homology_type, fill = homology_type)) +
     geom_bar(stat = "identity", position = "dodge") +
     geom_text(aes(label = n.x), hjust = -0.3) +
-    facet_grid(SP ~ reorder(cluster, cluster)) +
+    facet_wrap( ~ class) +
     theme_bw() +
     scale_x_continuous(limits = c(0, 1.3)) +
     NoLegend() -> p1
-  width_plot <- bind_rows(Hs_all_count, Mm_all_count) %>%
-    select(cluster) %>%
+  width_plot <- Hs_Mm_marker_count %>%
+    select(cluster ) %>%
     distinct %>%
     dim
-  
   ggsave(paste(organ, "/Marker_gene/Hs_Mm_", organ,
                "_seurat_integrated.cluster_marker_count.png", sep = ""),
-         p1, width = 1 + 2 * width_plot[1])
+         p1, width = 1 + width_plot[1])
   
   # 表を出力
   Hs_Mm_marker_count %>%
-    mutate(SP_cell = paste(SP, cluster, sep ="_")) %>%
+    mutate(SP_cell = paste(SP, class, sep ="_")) %>%
     group_by(SP_cell) %>%
     dplyr::select(c("homology_type", "n.x", "SP_cell")) %>%
     pivot_wider(names_from = SP_cell,
-                values_from = n.x, values_fill = 0) %>%
+                values_from = n.x,
+                values_fill = 0) %>%
     write.table(file = paste(organ, "/Marker_gene/Hs_Mm_", organ,
                              "_seurat_integrated.cluster_marker_count.tsv",
                              sep = ""),
               quote = F, row.names = F, sep = "\t")
   # 表を出力
   Hs_Mm_marker_count %>%
-    mutate(SP_cell = paste(SP, cluster, sep ="_")) %>%
+    mutate(SP_cell = paste(SP, class, sep ="_")) %>%
     group_by(SP_cell) %>%
     mutate(ratio = round(ratio, digits = 3)) %>%
     dplyr::select(c("homology_type", "ratio", "SP_cell")) %>%
     pivot_wider(names_from = SP_cell,
-                values_from = ratio, values_fill = 0) %>%
+                values_from = ratio,
+                values_fill = 0) %>%
     write.table(file = paste(organ, "/Marker_gene/Hs_Mm_", organ,
-                             "_seurat_integrated.cluster_marker_ratio.tsv", sep = ""),
-              quote = F, row.names = F, sep = "\t")
+                             "_seurat_integrated.cluster_marker_ratio.tsv",
+                             sep = ""),
+                quote = F, row.names = F, sep = "\t")
 }
 ```
 
